--- a/css/style.css
+++ b/css/style.css
@@ -849,13 +849,12 @@ hamburger
 }
 
 #menu {
-  border: 2px solid yellow;
   min-height: 100vh;
   padding: 0;
   z-index: 5;
 }
 #menu .menu-section {
-  border: 2px solid red;
+  border-bottom: 2px solid #000;
   height: 100vh;
   padding: 10vh 0;
   background-color: #29323c;
@@ -866,7 +865,6 @@ hamburger
 }
 #menu .menu-section .menu-img figure {
   overflow: hidden;
-  border: 1px solid green;
   width: 100%;
   height: 100%;
 }
@@ -904,7 +902,6 @@ hamburger
     bottom: 20vh;
     left: 50%;
     transform: translateX(-50%);
-    border: 1px solid red;
     width: 19rem;
     display: flex;
     justify-content: space-between;
@@ -923,11 +920,30 @@ hamburger
 }
 @media (min-width: 1024px) {
   #menu .menu-section {
-    display: flex;
-    position: relative;
+    background-image: url(../img/syntex-1.jpg);
+    background-size: 50%;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
   #menu .menu-section .menu-img {
     display: none;
+  }
+  #menu .menu-section .menu-content {
+    border: 2px solid;
+    width: 50%;
+    text-align: center;
+  }
+  #menu .menu-section .menu-content .menu-cta {
+    position: relative;
+    top: 20vh;
+    border: 2px solid red;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
+  #menu .menu-section .menu-content .menu-cta .btn {
+    width: 10rem;
   }
 }
 
