--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -320,12 +320,12 @@
 
 // MENU 
 #menu {
-    border: 2px solid yellow;
+    // border: 2px solid yellow;
     min-height: 100vh;
     padding: 0;
     z-index: 5;
     .menu-section {
-        border: 2px solid red;
+        border-bottom: 2px solid#000;
         height: 100vh;
         padding: 10vh 0;
         background-color: $overlay-blue-dark;
@@ -337,7 +337,7 @@
         .menu-img {
             figure {
                 overflow: hidden;
-                border: 1px solid green;
+                // border: 1px solid green;
                 width: 100%;
                 height: 100%;
                 img {
@@ -387,7 +387,7 @@
                     bottom: 20vh;
                     left: 50%;
                     transform: translateX(-50%);
-                    border: 1px solid red;
+                    // border: 1px solid red;
                     width: 19rem;
                     display: flex;
                     justify-content: space-between;
@@ -409,13 +409,34 @@
 
         // DESKTOP MENU SECTION STYLE
         @media (min-width: 1024px) {
-            display: flex;
-            position: relative;
             .menu-img {
                 display: none;
-                figure {
-                }
             }
+            .menu-content {
+                border: 2px solid;
+                width: 50%;
+                text-align: center;
+
+                .menu-cta {
+                    position: relative;
+                    top: 20vh;
+                    border: 2px solid red;
+                    display: flex;
+                    justify-content: center;
+                    gap: 1rem;
+
+                    .btn {
+                        width: 10rem;
+                    }
+                }
+
+            }
+
+            background-image: url(../img/syntex-1.jpg);
+            background-size: 50%;
+            background-position: right;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
         
 
