--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -65,10 +65,11 @@
         #hero-h1 {
             // margin: 1em auto;
             background: transparent;
-            padding: 0; 
+            padding: 5vh 0; 
             border-radius: 5px;
             position: absolute;
             // border: 1px solid #fff;
+            // overflow-y: hidden;
             width: max-content;
             text-transform: capitalize;
             top: 15vh;
@@ -170,11 +171,11 @@
             border-radius: 1rem;
             border: none;
             outline: none;
-            // opacity: 0;
-            // transform: scale(.5);
-            // transform-style: preserve-3d;
-            // animation: show-cta 4s 5.5s;
-            // animation-fill-mode: forwards;
+            opacity: 0;
+            transform: translateY(10vh);
+            transform-style: preserve-3d;
+            animation: show-cta 4s 5.5s;
+            animation-fill-mode: forwards;
             transition: .3s linear;
             cursor: pointer;
             -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -184,7 +185,7 @@
             @keyframes show-cta {
                 100% {
                     opacity: 1;
-                    transform: scale(1);
+                    transform: scale(1) translateY(0);
                 }
             }
 
@@ -260,7 +261,7 @@
             @media (max-width: 820px) {
                 &:active {
                     transition: .2s;
-                    transform: scale(.9);
+                    transform: scale(.95);
                     &::before {
                         opacity: 0;
                     }
@@ -273,7 +274,7 @@
             @media (min-width: 820px) {
                 &:hover {
                     transition: .2s;
-                    transform: scale(.9);
+                    transform: scale(.95);
                     &::before {
                         opacity: 0;
                     }
