--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -99,7 +99,7 @@
                     color: $text-light;
                     text-align: left;
                     // font-size: 2rem;
-                    margin: .5rem 0;
+                    margin: .5rem 0 0;
                     opacity: 0;
                     line-height: 1.3;
                     animation: hero-span 5s ease-in-out;
@@ -166,7 +166,7 @@
             text-align: left;
             font-family: 'Gruppo',cursive;
             padding: .5em;
-            margin: 5vh 0;
+            margin: 1rem 0;
             width: auto;
             border-radius: 1rem;
             border: none;
