--- a/css/style.css
+++ b/css/style.css
@@ -672,7 +672,7 @@ hamburger
   display: inline-block;
   color: #f4f4f4;
   text-align: left;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 0;
   opacity: 0;
   line-height: 1.3;
   animation: hero-span 5s ease-in-out;
@@ -724,7 +724,7 @@ hamburger
   text-align: left;
   font-family: "Gruppo", cursive;
   padding: 0.5em;
-  margin: 5vh 0;
+  margin: 1rem 0;
   width: auto;
   border-radius: 1rem;
   border: none;
