--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -72,7 +72,7 @@
             // overflow-y: hidden;
             width: max-content;
             text-transform: capitalize;
-            top: 15vh;
+            top: 20vh;
             left: 5vw;
 
             @media (min-width: 600px) {
@@ -165,9 +165,10 @@
             display: block;
             text-align: left;
             font-family: 'Gruppo',cursive;
-            padding: .5em;
+            padding: .5em 1rem;
             margin: 1rem 0;
             width: auto;
+            width:max-content;
             border-radius: 1rem;
             border: none;
             outline: none;
@@ -290,7 +291,7 @@
         .slogan {
             // border: 1px solid #fff;
             position: absolute;
-            bottom: 15vh;
+            bottom: 10vh;
             left: 0;
             padding: 0 5vw;
             width: 100%;
