--- a/css/style.css
+++ b/css/style.css
@@ -619,10 +619,26 @@ hamburger
 
 #home {
   padding: 0;
-  background-color: #29323c;
   position: relative;
   z-index: 1;
   overflow: hidden;
+}
+@media (min-width: 1024px) {
+  #home {
+    background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
+    background-position: center left;
+    background-position: 10% 50%;
+  }
+  #home::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: radial-gradient(transparent, #000);
+  }
 }
 #home .hero {
   overflow: hidden;
@@ -631,17 +647,32 @@ hamburger
 }
 #home .hero .hero-bg {
   position: absolute;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  isolation: isolate;
+}
+@media (min-width: 1024px) {
+  #home .hero .hero-bg {
+    display: none;
+  }
+}
+#home .hero .hero-bg::after {
+  content: "";
+  position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  mix-blend-mode: overlay;
+  background: rgba(0, 0, 0, 0.45);
+  z-index: 1;
 }
 #home .hero .hero-bg img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: -1;
 }
 #home .hero #hero-h1 {
   background: transparent;
@@ -652,13 +683,6 @@ hamburger
   text-transform: capitalize;
   top: 20vh;
   left: 5vw;
-}
-@media (min-width: 600px) {
-  #home .hero #hero-h1 {
-    padding: 0.5em;
-    left: 50%;
-    transform: translateX(-50%);
-  }
 }
 #home .hero #hero-h1 h2 {
   font-size: 2.5rem;
