--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,64 +1,65 @@
 // HERO
 #home {
     padding: 0;
-    background-color: $overlay-blue-dark;
+    // background-color: $overlay-blue-dark;
     position: relative;
     z-index: 1;
     overflow: hidden;
-    // &::after {
-    //     position: absolute;
-    //     content: '';
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     background-repeat: no-repeat;
-    //     background-position: center;
-    //     background-position: left;
-    //     background-size: cover;
-    //     z-index: -1;
-    //     mix-blend-mode: overlay;
-    //     opacity: .7;
-        
-    //     @media (min-width: 1024px) {
-    //         width: 50%;
-    //         background-position: left;
-    //         background-size: contain;;
-    //         background-attachment: fixed;
-    //         opacity: 1;
-    //         background-image: url(../img/shakexblue-min.jpg);
-    //     }
-    //     @media (max-width: 1024px) {
-    //         // background-position: 15% 50%;
-    //         opacity: 1;
-    //         // background-size: cover;
-    //         // background-image: url('../img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg');
-    //     }
-    // }
+    // DESKTOP HERO IMAGE
+    @media (min-width: 1024px){
+        background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
+        background-position: center left;
+        background-position: 10% 50%;
+        &::after {
+                position: absolute;
+                content: '';
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: -1;
+                background: radial-gradient(transparent, #000);
+        }
+    }
+    
     
     .hero {
         overflow: hidden;
         min-height: 100vh;
         position: relative;
+        
         // HERO IMAGE CONTAINER WITH OVERLAY BLEND MODE
         .hero-bg {
             @media (min-width: 1024px){
-                // display: none;
+                display: none;
             
             }
             // border: 2px solid red;
             position: absolute;
-            top: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
+            position: relative;
+            // top: 0;
+            // right: 0;
+            width: 100vw;
+            height: 100vh;
             overflow: hidden;
-            mix-blend-mode: overlay;
+            // mix-blend-mode: overlay;
+            isolation: isolate;
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, .45);
+                z-index: 1;
+            }
 
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                z-index: -1;
             }
         }
         // ANIMATED INTRO
@@ -80,9 +81,9 @@
                 // display: flex;
                 // flex-direction: column;
                 // align-items: center;
-                padding: .5em;
-                left: 50%;
-                transform: translateX(-50%);
+                // border: 2px solid red;
+                // left: 50%;
+                // transform: translateX(-50%);
             }
 
             h2 {
