--- a/css/style.css
+++ b/css/style.css
@@ -628,6 +628,7 @@ hamburger
     background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
     background-position: center left;
     background-position: 10% 50%;
+    background-attachment: fixed;
   }
   #home::after {
     position: absolute;
@@ -950,7 +951,6 @@ hamburger
 }
 @media (min-width: 1024px) {
   #menu .menu-section {
-    background-image: url(../img/syntex-1.jpg);
     background-size: 50%;
     background-position: right;
     background-repeat: no-repeat;
@@ -964,6 +964,9 @@ hamburger
     width: 50%;
     text-align: center;
   }
+  #menu .menu-section .menu-content .menu-title h2 {
+    font-size: 2rem;
+  }
   #menu .menu-section .menu-content .menu-cta {
     position: relative;
     top: 20vh;
@@ -974,6 +977,25 @@ hamburger
   }
   #menu .menu-section .menu-content .menu-cta .btn {
     width: 10rem;
+  }
+  #menu .menu-section::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: -1;
+  }
+  #menu .menu-section#menu-1 {
+    background-image: url(../hero/peter-bo-faMPQuSe4Wo-unsplash-bg.jpg);
+  }
+  #menu .menu-section#menu-2 {
+    background-image: url(../hero/walling-XLqiL-rz4V8-unsplash.jpg);
+  }
+  #menu .menu-section#menu-3 {
+    background-image: url(../img/altumcode-U0tBTn8UR8I-unsplash.jpg);
   }
 }
 
