--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -332,7 +332,8 @@
         border-bottom: 2px solid#000;
         height: 100vh;
         padding: 10vh 0;
-        background-color: $overlay-blue-dark;
+        // background-color: $overlay-blue-dark;
+        background: $overlay-dark;
         position: relative;
         text-align: center;
         text-align: left;
@@ -354,9 +355,10 @@
         // GENERAL CONTENT DIV STYLE
         .menu-content {
             .menu-title {
-                text-transform: capitalize;
                 h2 {
+                    text-transform: capitalize;
                     color: #fff;
+                    margin-bottom: .5rem;
                 }
 
                 p {
