--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -332,8 +332,7 @@
         border-bottom: 2px solid#000;
         height: 100vh;
         padding: 10vh 0;
-        // background-color: $overlay-blue-dark;
-        background: $overlay-dark;
+        background-color: $overlay-blue-dark;
         position: relative;
         text-align: center;
         text-align: left;
