work link padidng

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -80,7 +80,7 @@
                 background: $span-crimson-dark;
                 border-radius: 5px;
                 color: $text-light;
-                padding: .5rem;
+                padding: 1rem .5rem;
                 margin: 0 auto;
                 display: block;
                 text-align: center;
