--- a/css/style.css
+++ b/css/style.css
@@ -1914,7 +1914,7 @@ hamburger
   background: #dc143c8c;
   border-radius: 5px;
   color: #f4f4f4;
-  padding: 0.5rem;
+  padding: 1rem 0.5rem;
   margin: 0 auto;
   display: block;
   text-align: center;
