--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -7,6 +7,7 @@
     }
 
     .work-items {
+        margin-top: 15vh;
         display: grid;
         grid-template-columns: 1fr;
         gap: 10vh;
