--- a/sass/style.scss
+++ b/sass/style.scss
@@ -33,6 +33,7 @@ body {
         color: $text-black;
         line-height: 1.5;
         font-weight: 400;
+        letter-spacing: .02rem;
     }
 
     span {
