--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -39,12 +39,14 @@
         // width: 90%;
         // border: 2px solid red;
         text-align: left;
+        margin: 0 auto 1rem;
+        padding: 1rem .5rem .5rem 5vw;
+
+        // border-radius: .5rem;
         // padding: .5rem .3rem;
-        margin: 2em auto;
         // background-image: var(--overlay);
         // background: #48556388;
         // background: $overlay-dark;
-        border-radius: .5rem;
         // border: none;
         position: relative;
         z-index: 30;
@@ -62,7 +64,6 @@
         //     outline: none;
         // }
         .skills-info {
-            padding: 1rem .5rem 2rem 5vw;
         p {
             color: $text-light;
             color: $overlay-blue-dark;
@@ -92,22 +93,22 @@
             }
         }
         // skills top 'down arrow'
-        &::after {
-            content: '';
-            position: absolute;
-            width: 45px;
-            height: 45px;
-            border: none;
-            top: 100%;
-            left: 50%;
-            margin-left: -24px;
-            margin-top: -24px;
-            transform: rotate(45deg);
-            background-image: linear-gradient(135deg, transparent 48%, #3d4955 0%);
-            transition: .2s;
-            box-shadow: inset -5px -5px 5px #000a,
-                        inset 5px 5px 5px #3d495500;
-        }
+        // &::after {
+        //     content: '';
+        //     position: absolute;
+        //     width: 45px;
+        //     height: 45px;
+        //     border: none;
+        //     top: 100%;
+        //     left: 50%;
+        //     margin-left: -24px;
+        //     margin-top: -24px;
+        //     transform: rotate(45deg);
+        //     background-image: linear-gradient(135deg, transparent 48%, #3d4955 0%);
+        //     transition: .2s;
+        //     box-shadow: inset -5px -5px 5px #000a,
+        //                 inset 5px 5px 5px #3d495500;
+        // }
         // end of skills top 'down arrow'
         
         
@@ -141,6 +142,7 @@
             border-radius: .5rem;
             background: $link-crimson-dark;
             text-align: center;
+            text-transform: capitalize;
             transition: .2s;
             font-family: 'Gruppo', cursive;
             letter-spacing: .1rem;
