work title & work items width

--- a/css/style.css
+++ b/css/style.css
@@ -1904,6 +1904,7 @@ hamburger
   text-transform: capitalize;
   font-family: "Ubuntu", sans-serif;
   font-size: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 #work .work-items .work-item .work-title p {
   color: #000;
@@ -1922,8 +1923,8 @@ hamburger
 }
 @media (min-width: 768px) {
   #work .work-items .work-item figure {
-    width: 10rem;
-    height: 10rem;
+    width: 13rem;
+    height: 13rem;
   }
 }
 #work .work-items .work-item figure img {
@@ -1939,7 +1940,7 @@ hamburger
   background: #dc143c8c;
   border-radius: 5px;
   color: #f4f4f4;
-  padding: 1rem 0.5rem;
+  padding: 0.7rem 0.5rem;
   margin: 0 auto;
   display: block;
   text-align: center;
@@ -1972,7 +1973,7 @@ hamburger
 }
 @media (min-width: 820px) {
   #work .work-items .work-item .view-site-btn {
-    width: 10rem;
+    width: 13rem;
   }
   #work .work-items .work-item .view-site-btn:hover {
     transform: scale(0.95);
