--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -41,6 +41,7 @@
                     text-transform: capitalize;
                     font-family: $font-ubuntu;
                     font-size: 1.5rem;
+                    margin-bottom: .5rem;
                 }
                 
                 p {
@@ -51,8 +52,8 @@
             figure {
                 margin: 5vh auto;
                 @media (min-width: 768px) {
-                    width: 10rem;
-                    height: 10rem;
+                    width: 13rem;
+                    height: 13rem;
                 }
                 width: 65%;
                 width: 16rem;
@@ -81,7 +82,7 @@
                 background: $span-crimson-dark;
                 border-radius: 5px;
                 color: $text-light;
-                padding: 1rem .5rem;
+                padding: .7rem .5rem;
                 margin: 0 auto;
                 display: block;
                 text-align: center;
@@ -117,7 +118,7 @@
                 // HOVER AND ACTIVE MEDIA QUERY
                 // DESKTOP HOVER STATE
                 @media (min-width: 820px){
-                    width: 10rem;
+                    width: 13rem;
                     &:hover {
                         transform: scale(.95);
                         letter-spacing: normal;
