--- a/css/style.css
+++ b/css/style.css
@@ -510,7 +510,6 @@ hamburger
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
-  padding: 1em;
   display: block;
   text-align: left;
   font-family: "Gruppo", cursive;
@@ -565,7 +564,7 @@ hamburger
   #header .header #navbar .nav-list ul li {
     position: relative;
     display: flex;
-    margin-right: 0.5em;
+    margin-right: 0.5rem;
   }
   #header .header #navbar .nav-list ul li::before {
     position: absolute;
@@ -585,7 +584,7 @@ hamburger
   }
   #header .header #navbar .nav-list ul li a {
     font-size: 1rem;
-    padding: 0.3em 0.5em;
+    padding: 0.5rem;
     margin: 0 auto;
     display: block;
     float: left;
