--- a/css/style.css
+++ b/css/style.css
@@ -954,6 +954,63 @@ hamburger
 }
 #menu .menu-section .menu-content .menu-cta .btn {
   color: #ead2a1;
+  display: none;
+}
+#menu .menu-section .menu-content .menu-cta .page-btn {
+  width: 10rem;
+  color: #ead2a1;
+  border: none;
+  border-radius: 1rem;
+  padding: 0.5rem 1rem;
+  letter-spacing: 0.25rem;
+  text-align: center;
+  transition: 0.25s;
+  position: relative;
+  isolation: isolate;
+}
+#menu .menu-section .menu-content .menu-cta .page-btn::before, #menu .menu-section .menu-content .menu-cta .page-btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.25s;
+  border-radius: 1rem;
+  z-index: -1;
+}
+#menu .menu-section .menu-content .menu-cta .page-btn::before {
+  background: linear-gradient(0deg, #000a, rgba(0, 0, 0, 0.2));
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+}
+#menu .menu-section .menu-content .menu-cta .page-btn::after {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), #000a);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
+  opacity: 0;
+}
+@media (min-width: 820px) {
+  #menu .menu-section .menu-content .menu-cta .page-btn:hover {
+    transform: scale(0.98);
+    letter-spacing: normal;
+  }
+  #menu .menu-section .menu-content .menu-cta .page-btn:hover::before {
+    opacity: 0;
+  }
+  #menu .menu-section .menu-content .menu-cta .page-btn:hover::after {
+    opacity: 1;
+  }
+}
+@media (max-width: 820px) {
+  #menu .menu-section .menu-content .menu-cta .page-btn:active {
+    transform: scale(0.98) translateX(-50%);
+    letter-spacing: normal;
+  }
+  #menu .menu-section .menu-content .menu-cta .page-btn:active::before {
+    opacity: 0;
+  }
+  #menu .menu-section .menu-content .menu-cta .page-btn:active::after {
+    opacity: 1;
+  }
 }
 @media (max-width: 1024px) {
   #menu .menu-section .menu-img {
@@ -980,10 +1037,9 @@ hamburger
   #menu .menu-section .menu-content .menu-cta .btn {
     width: 100%;
   }
-  #menu .menu-section .menu-content .menu-cta .btn.page-btn {
+  #menu .menu-section .menu-content .menu-cta .page-btn {
     position: absolute;
     bottom: -10vh;
-    width: 50%;
     left: 50%;
     transform: translateX(-50%);
   }
