--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -409,6 +409,59 @@
             .menu-cta {
                 .btn {
                     color: $span-gold;
+                    display: none;
+                }
+
+                .page-btn {
+                    width: 10rem;
+                    color: $span-gold;
+                    border: none;
+                    border-radius: 1rem;
+                    padding: .5rem 1rem;
+                    letter-spacing: .25rem;
+                    text-align: center;
+                    transition: .25s;
+                    position: relative;
+                    isolation: isolate;
+                    // BUTTON PSEUDO BG & SHADOW
+                    &::before, &::after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        transition: .25s;
+                        border-radius: 1rem;
+                        z-index: -1;
+                    }
+                    &::before {
+                        background: linear-gradient(0deg, #000a, rgba(0,0,0,.2));
+                        box-shadow: $box-light-top-sm;
+                    }
+                    &::after {
+                        background: linear-gradient(0deg, rgba(0,0,0,.2), #000a);
+                        box-shadow: $box-light-top-sm-hover;
+                        opacity: 0;
+                    }
+                    // DESKTOP HOVER
+                    @media (min-width: 820px){
+                        &:hover {
+                            transform: scale(.98);
+                            letter-spacing: normal;
+                            &::before {opacity: 0;}
+                            &::after {opacity: 1;}
+                        }
+                    }
+                    // MOBILE ACTIVE CLASS
+                    @media (max-width: 820px){
+                        &:active {
+                            transform: scale(.98) translateX(-50%);
+                            letter-spacing: normal;
+                            &::before {opacity: 0;}
+                            &::after {opacity: 1;}
+                        }
+                    }
                 }
             }
         }
@@ -441,13 +494,13 @@
 
                     .btn {
                         width: 100%;
-                        &.page-btn {
-                            position: absolute;
-                            bottom: -10vh;
-                            width: 50%;
-                            left: 50%;
-                            transform: translateX(-50%);
-                        }
+                        
+                    }
+                    .page-btn {
+                        position: absolute;
+                        bottom: -10vh;
+                        left: 50%;
+                        transform: translateX(-50%);
                     }
                 }
             }
