removed commented out code

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -124,7 +124,7 @@
                     }
                 }
             }
-                // // "AKA" SPAN
+                // "AKA" SPAN
                 #aka {
                     span {
                         font-family: 'Philosopher', sans-serif;
@@ -564,39 +564,5 @@
                 background-image: url(../img/altumcode-U0tBTn8UR8I-unsplash.jpg);
             }
         }
-        
-
-        // DESKTOP MENU SECTION STYLE
-        // @media (min-width: 1024px) {
-        //     .menu-img {
-        //         display: none;
-        //     }
-        //     // GENERAL MENU BACKGROUND STYLE
-        //     background-repeat: no-repeat;
-        //     background-size: 50%;
-        //     background-position: center;
-        //     background-attachment: fixed;
-        //     // MENU IMAGES
-        //     &#menu-1 {
-        //         background-image: url("../hero/peter-bo-faMPQuSe4Wo-unsplash-bg.jpg");
-        //         background-size: contain;
-        //         background-position: left;
-        //     }
-            
-        //     &#menu-2 {
-        //         background-image: url("../img/altumcode-U0tBTn8UR8I-unsplash.jpg");
-        //         background-position: right;
-        //     }
-
-        //     &#menu-3 {
-        //         background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
-        //         background-position: left;
-        //         background-size: cover;
-        //     }
-        //     &#menu-4 {
-        //         background-image: url("../img/altumcode-U0tBTn8UR8I-unsplash.jpg");
-        //         background-position: right;
-        //     }
-        // }
     }
 }
