--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -159,6 +159,7 @@
                                     padding: .5em 0;
                                     width: 100%;
                                     display: block;
+                                    font-size: 1rem;
                                     // border: 1px solid yellow;
                                     border-radius: 5px;
                                     // background-color: $overlay-blue-darker;
