work link text transform

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -83,6 +83,7 @@
                 border-radius: 5px;
                 color: $text-light;
                 padding: .7rem .5rem;
+                text-transform: capitalize;
                 margin: 0 auto;
                 display: block;
                 text-align: center;
