--- a/css/style.css
+++ b/css/style.css
@@ -1997,6 +1997,7 @@ hamburger
   border-radius: 5px;
   color: #f4f4f4;
   padding: 0.7rem 0.5rem;
+  text-transform: capitalize;
   margin: 0 auto;
   display: block;
   text-align: center;
