--- a/css/style.css
+++ b/css/style.css
@@ -916,13 +916,18 @@ hamburger
   object-fit: contain;
 }
 #menu .menu-section .menu-img figure.fig-js img {
-  filter: drop-shadow(0.5rem 0.5rem 0.5rem #000);
+  filter: drop-shadow(0.5rem 0.5rem 0.25rem #000);
   transform-style: preserve-3d;
 }
 #menu .menu-section .menu-img figure.fig-js:hover img {
   transition: 1s;
-  transform: translateY(-2rem) rotateY(10deg);
-  filter: drop-shadow(0 1rem 0.1rem #000a);
+  animation: imageTransition 3s infinite;
+}
+@keyframes imageTransition {
+  50% {
+    filter: drop-shadow(0 1rem 0.1rem #000);
+    transform: translateY(-2rem) rotateY(10deg);
+  }
 }
 #menu .menu-section .menu-img.io-item img {
   transform: scale(0.5);
@@ -942,22 +947,6 @@ hamburger
 }
 #menu .menu-section .menu-content .menu-title p {
   color: #f4f4f4;
-}
-#menu .menu-section .menu-content .menu-title.title-js.active-title h2 {
-  animation: title 5s 3;
-  animation-delay: 2s;
-}
-#menu .menu-section .menu-content .menu-title.title-js.active-title p {
-  animation: title 5s 3;
-  animation-delay: 1s;
-}
-@keyframes title {
-  40% {
-    color: lime;
-  }
-  70% {
-    color: #faed38;
-  }
 }
 #menu .menu-section .menu-content .menu-title.io-item h2 {
   opacity: 0;
@@ -1145,7 +1134,8 @@ hamburger
 #skills .skills-top {
   text-align: left;
   margin: 0 auto 1rem;
-  padding: 1rem 0.5rem 0.5rem 5vw;
+  padding: 1rem 0.5rem 0.5rem 1rem;
+  padding: 1rem 5vw;
   position: relative;
   z-index: 30;
 }
