--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -40,7 +40,8 @@
         // border: 2px solid red;
         text-align: left;
         margin: 0 auto 1rem;
-        padding: 1rem .5rem .5rem 5vw;
+        padding: 1rem .5rem .5rem 1rem;
+        padding: 1rem 5vw;
         position: relative;
         z-index: 30;
         .skills-info {
