--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -150,6 +150,8 @@
         // end of read more button
         // article
         .article-container {
+            // border: 2px solid red;
+            overflow: hidden;
             article {
                 &.about-article {
                     padding: .5em 1em;
