--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -41,14 +41,14 @@
         text-align: left;
         margin: 0 auto 1rem;
         padding: 1rem .5rem .5rem 1rem;
-        padding: 1rem 5vw;
+        padding: 1rem;
         position: relative;
         z-index: 30;
         .skills-info {
         p {
             color: $text-light;
             color: $overlay-blue-dark;
-            font-size: .9rem;
+            font-size: .5rem;
             // font-size: 1rem;
             line-height: 1.6;
             @media (min-width: 768px){
